Add RanksCommand to CommandRegistry and improve player promotion/demotion logic